# libframe

./: .gitignore  AGENTS.md  CMakeLists.txt  test.c
include/lf/: allocator.h  array.h  assert.h  bit.h  compat.h  macro.h
src/: allocator.c  array.c  assert.c  bit.c
tests/: CMakeLists.txt  test_array.c  test_bit.c
